# llk

./: .env_  .gitignore  README.md  README_dev.md  app.py  pyproject.toml  streamlit_app.py
.github/workflows/: tests.yml
app/: main.py
app/chains/: base_chain.py
app/models/: gemini.py
langchain_app/: main.py
langchain_app/chains/: seed_chain.py
langchain_app/models/: gemini.py
langchain_app/prompts/: seed_words.txt
tests/: test_seed_chain.py
